--- a/index.html
+++ b/index.html
@@ -1,102 +1,208 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-<!-- ADD META TAG REQUIRED TO MAKE PAGE RESPONSIVE-->
-    <meta name="description" content="Vaanguard- Leading the Future of Success. Premier strategic investment and business acceleration firm for high-growth enterprises.">
-    <meta name="keywords" content="business growth, strategic investment, mergers, corporate consulting, digital transformation">
-<!-- ADD META TAG FOR AUTHOR AND YOUR NAME-->
+    <!-- ADD META TAG REQUIRED TO MAKE PAGE RESPONSIVE-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Vaanguard- Leading the Future of Success. Premier strategic investment and business acceleration firm for high-growth enterprises.">
+    <meta name="keywords"
+        content="business growth, strategic investment, mergers, corporate consulting, digital transformation">
+    <!-- ADD META TAG FOR AUTHOR AND YOUR NAME-->
+    <meta name="author" content="Carey Tung">
     <title>Vanguard | Leading the Future of Success</title>
-<!-- ADD LINK TO YOUR CSS-->
+    <!-- ADD LINK TO YOUR CSS-->
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-<!-- WRAP CONTENT IN VALIDATED, SEMANTIC HTML5 (SEE HINTS FOLDER LINKED TO IN THE CANVAS INSTRUCTIONS)-->
-    Vaanguard
-        Main Navigation
-            About
-            Services
-            Contact
+    <!-- WRAP CONTENT IN VALIDATED, SEMANTIC HTML5 (SEE HINTS FOLDER LINKED TO IN THE CANVAS INSTRUCTIONS)-->
+    <header>
+        <div></div>
+        <h1>Vanguard</h1>
+        <nav id="nav1">
+            <input type="checkbox" id="menu-toggle">
+            <label for="menu-toggle"><span></span></label>
+            <ul>
+                <li><a href="#">ABOUT</a></li>
+                <li><a href="#">SERVICES</a></li>
+                <li><a href="#">CONTACT</a></li>
+            </ul>
+        </nav>
 
-        Innovation & Investment
-        We empower businesses to lead the future with high-impact strategies, market intelligence, and financial solutions that drive success.
-        Request a Consultation
+        <nav id="nav2">
+            <ul>
+                <li><a href="#">ABOUT</a></li>
+                <li><a href="#">SERVICES</a></li>
+                <li><a href="#">CONTACT</a></li>
+            </ul>
+        </nav>
+    </header>
 
-        Our Expertise. Your Edge.
-        We redefine success by leveraging AI-driven analytics, market intelligence, and high-yield investment strategies to propel businesses forward. Whether you're looking to scale, optimize, or dominate, our strategic expertise delivers results.'
+    <main>
+        <section class="innovation">
+            <div class="container">
+                <h2>Innovation & Investment</h2>
+                <p>We empower businesses to lead the future with high-impact strategies, market intelligence, and
+                    financial
+                    solutions that drive success.</p>
+                <div class="buttonContainer"><a href="#">Request a Consultation</a></div>
+            </div>
 
-        What We Offer
-            Strategic Growth Consulting
-            Unlock new revenue streams and optimize market expansion strategies.
+        </section>
 
-            High-Impact Investment Solutions
-            Maximize returns with data-driven portfolio management.
+        <div class="container">
+            <section>
+                <h2>Our Expertise. Your Edge.</h2>
+                <p>We redefine success by leveraging AI-driven analytics, market intelligence, and high-yield investment
+                    strategies
+                    to
+                    propel businesses forward. Whether you're looking to scale, optimize, or dominate, our strategic
+                    expertise
+                    delivers
+                    results.</p>
+            </section>
 
-            Business Acceleration & Mergers
-            Identify opportunities for rapid growth and high-value acquisitions.
+            <section>
+                <h2>What We Offer</h2>
+                <div id="offer">
+                    <section class="offerings">
+                        <h3>Strategic Growth Consulting</h3>
+                        <p>Unlock new revenue streams and optimize market expansion strategies.</p>
+                    </section>
 
-            Digital Transformation
-            Stay at the forefront of industry advancements with AI, blockchain, and automation.
+                    <section class="offerings">
+                        <h3>High-Impact Investment Solutions</h3>
+                        <p>Maximize returns with data-driven portfolio management.</p>
+                    </section>
 
-            Exclusive Executive Advisory Services
-            Personalized insights and leadership support for C-suite executives and high-net-worth investors.
+                    <section class="offerings">
+                        <h3>Business Acceleration & Mergers</h3>
+                        <p>Identify opportunities for rapid growth and high-value acquisitions.</p>
+                    </section>
 
-            Corporate Innovation
-            Strategic implementation of new ideas, technologies, and processes to drive business growth, enhance competitive advantage, and adapt to evolving market demands.
+                    <section class="offerings">
+                        <h3>Digital Transformation</h3>
+                        <p>Stay at the forefront of industry advancements with AI, blockchain, and automation.</p>
+                    </section>
 
-            Proven Results
-            Our data-driven strategies have delivered outstanding ROI, leading to significant revenue growth.
+                    <section class="offerings">
+                        <h3>Exclusive Executive Advisory Services</h3>
+                        <p>Personalized insights and leadership support for C-suite executives and high-net-worth
+                            investors.
+                        </p>
+                    </section>
 
-                Profits
-                Year
-                Revenue ($M)
-                Growth (%)
+                    <section class="offerings">
+                        <h3>Corporate Innovation</h3>
+                        <p>Strategic implementation of new ideas, technologies, and processes to drive business growth,
+                            enhance
+                            competitive
+                            advantage, and adapt to evolving market demands.</p>
+                    </section>
+                </div>
+            </section>
+        </div>
 
-                2020
-                $120M
-                30%
 
-                2021
-                $180M
-                50%
+        <section id="results">
+            <div class="container">
+                <h2>Proven Results</h2>
+                <p>Our data-driven strategies have delivered outstanding ROI, leading to significant revenue growth.</p>
 
-                2022
-                $250M
-                70%
+                <div class="results-container">
+                    <h3>Profits</h3>
+                    <table class="results-table">
+                        <thead>
+                            <tr>
+                                <th>Year</th>
+                                <th>Revenue ($M)</th>
+                                <th>Growth (%)</th>
+                            </tr>
+                        </thead>
 
-                2023
-                $340M
-                85%
+                        <tr>
+                            <td>2020</td>
+                            <td>$120M</td>
+                            <td>30%</td>
+                        </tr>
 
-                2024
-                $420M
-                100%
+                        <tr class="charcoal">
+                            <td>2021</td>
+                            <td>$180M</td>
+                            <td>50%</td>
+                        </tr>
 
-                Growth
-<!-- CODE PROVIDED FOR YOU, NOTHING TO DO FOR THE BAR CHART IN THE HTML-->
-                    <div  id="bar-chart">
+                        <tr>
+                            <td>2022</td>
+                            <td>$250M</td>
+                            <td>70%</td>
+                        </tr>
+
+                        <tr class="charcoal">
+                            <td>2023</td>
+                            <td>$340M</td>
+                            <td>85%</td>
+                        </tr>
+
+                        <tr>
+                            <td>2024</td>
+                            <td>$420M</td>
+                            <td>100%</td>
+                        </tr>
+                    </table>
+
+                    <h3>Growth</h3>
+                    <!-- CODE PROVIDED FOR YOU, NOTHING TO DO FOR THE BAR CHART IN THE HTML-->
+                    <div id="bar-chart">
                         <div class="bar" data-year="2020" style="--height: 30%;"></div>
                         <div class="bar" data-year="2021" style="--height: 50%;"></div>
                         <div class="bar" data-year="2022" style="--height: 70%;"></div>
                         <div class="bar" data-year="2023" style="--height: 85%;"></div>
                         <div class="bar" data-year="2024" style="--height: 100%;"></div>
                     </div>
+                </div>
+            </div>
+        </section>
 
-        Contact Us
-        Want to take your business to the next level? Get in touch with our elite team today.
+    </main>
 
-            Full Name
+    <footer>
+        <div class="container">
+            <h2>Contact Us</h2>
+            <p>Want to take your business to the next level? Get in touch with our elite team today.</p>
 
-            Email Address
+            <form>
+                <div>
+                    <label>Full Name</label>
+                    <input type="text" id="fullName" name="fullName">
+                </div>
+                <div>
+                    <label>Email Address</label>
+                    <input type="email" id="emailAddress" name="emailAddress">
+                </div>
+                <div>
+                    <label>Company Name</label>
+                    <input type="text" id="companyName" name="companyName">
+                </div>
+                <div>
+                    <label>Industry</label>
+                    <input type="text" id="industry" name="industry">
+                </div>
+                <div>
+                    <label>How can we help you?</label>
+                    <textarea id="help" name="help"></textarea>
+                </div>
+                <div class="buttonContainer">
+                    <input type="submit" id="submitButton">
+                </div>
+            </form>
 
-            Company Name
-
-            Industry
-
-            How can we help you?
-
-            Submit
-
-        For educational purposes only. 
-        Email: info@vaanguard.com 
-        Phone: 480.123.4567
+            <div class="contact">
+                <p>For educational purposes only.</p>
+                <p>Email: <a href="mailto:info@vanguard.com">info@vanguard.com</a></p>
+                <p>Phone: 480.123.4567</p>
+            </div>
+        </div>
+    </footer>
